made changes to make payload sdk in use, added react hook form, fixed up workspace and have foundation layer of our workspaces and architecture
